[package]
name = "rs-drivelist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derivative = "2"
json = "0.12"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = { version= "0.3", features=["setupapi","winioctl","windef","handleapi","errhandlingapi","winerror","cfgmgr32","handleapi","fileapi","ioapiset","winbase","processenv"] }

[target.x86_64-unknown-linux-gnu.dependencies]
regex = "1"