[package]
name = "rs-drivelist"
version = "0.9.2"
edition = "2021"
authors = ["Mazter Irwan <ir1keren@gmail.com>"]
description = "This is basically a Rust implementation of [Balena's drivelist](https://github.com/balena-io-modules/drivelist)"
keywords = ["drivelist", "balena", "drive", "list", "filesystem"]
repository = "https://github.com/ir1keren/rs-drivelist.git"
license = "MIT OR Apache-2.0"
categories = ["api-bindings","filesystem","os::windows-apis","os::linux-apis"]

[lib]
name = "rs_drivelist"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
derivative = "2"
json = "0.12"

[target.x86_64-pc-windows-msvc.dependencies]
winapi = { version= "0.3", features=["setupapi","winioctl","windef","handleapi","errhandlingapi","winerror","cfgmgr32","handleapi","fileapi","ioapiset","winbase","processenv"] }

[target.x86_64-unknown-linux-gnu.dependencies]
regex = "1"